--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <div class=topbar>
             <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
             <ul class=navbuttons>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="about.html" class="active">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
