--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     <header>
         <div class=topbar>
-            <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+            <h1 class=logo><a href="index.html" class="active"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
             <ul class=navbuttons>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
