--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     </head>
         
     <header>
-        <div class=topbar>
-            <h1 class=logo><a href="index.html" class="active"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
-            <ul class=navbuttons>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </div>
+        <h1 class=logo><a href="index.html" class="active"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+        <ul class=navbar>
+            <li class=navbutton><a href="#">FORMAT</a></li>
+            <li class=navbutton><a href="about.html">ABOUT</a></li>
+            <li class=navbutton><a href="contact.html">CONTACT</a></li>
+        </ul>
     </header>
 
     <body>
