--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,17 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
 
+    <!--header contains the logo and navigation buttons-->
     <header>
-        <h1 class=logo><a href="index.html" class="active"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
         <ul class=navbar>
             <li class=navbutton><a href="#">FORMAT</a></li>
             <li class=navbutton><a href="about.html">ABOUT</a></li>
-            <li class=navbutton><a href="contact.html">CONTACT</a></li>
+            <li class=navbutton><a href="contact.html"  class="active">CONTACT</a></li>
         </ul>
     </header>
 
+    <!--TODO: flexbox setup of contact form with email/name/question and basic contact info-->
     <body>
         <h2>PAGE UNDER CONSTRUCTION</h2>
     </body>
