--- a/format.html
+++ b/format.html
@@ -2,20 +2,19 @@
     <head>
         <link rel="stylesheet" href="css/main.css">
     </head>
-
+     
     <!--header contains the logo and navigation buttons-->
     <header>
         <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
         <ul class=navbar>
-            <li class=navbutton><a href="format.html">FORMAT</a></li>
-            <li class=navbutton><a href="about.html" class="active">ABOUT</a></li>
+            <li class=navbutton><a href="format.html" class="active">FORMAT</a></li>
+            <li class=navbutton><a href="about.html">ABOUT</a></li>
             <li class=navbutton><a href="contact.html">CONTACT</a></li>
         </ul>
     </header>
 
-    <!--TODO: 2 column layout of personal photo + summary paragraph-->
     <body>
-        <h2>PAGE UNDER CONSTRUCTION</h2>
+    
     </body>
 
 </html>
