--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
         
+    <!--header contains the logo and navigation buttons-->
     <header>
         <h1 class=logo><a href="index.html" class="active"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
         <ul class=navbar>
-            <li class=navbutton><a href="#">FORMAT</a></li>
+            <li class=navbutton><a href="format.html">FORMAT</a></li>
             <li class=navbutton><a href="about.html">ABOUT</a></li>
             <li class=navbutton><a href="contact.html">CONTACT</a></li>
         </ul>
