--- a/format.html
+++ b/format.html
@@ -5,7 +5,7 @@
      
     <!--header contains the logo and navigation buttons-->
     <header>
-        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px">SAM DAVITT</a></h1>
         <ul class=navbar>
             <li class=navbutton><a href="format.html" class="active">FORMAT</a></li>
             <li class=navbutton><a href="about.html">ABOUT</a></li>
@@ -14,7 +14,32 @@
     </header>
 
     <body>
-    
+        <div class="leftcolumn">
+            <h2 style="color: white;">Hobbies</h2>
+            <div class="section">
+                <h4>Cooking</h4>
+                <img class="sectionimg"></img>
+                <p>Some body text about cooking & drinks hobby tbd</p>
+            </div>
+            <div class="section">
+                <h4>Hiking</h4>
+                <img class="sectionimg"></img>
+                <p>Some body text about hiking tbd</p>
+            </div>
+            <div class="section">
+                <h4>Kickboxing and BJJ</h4>
+                <img class="sectionimg"></img>
+                <p>Some body text about kickboxing tbd</p>
+            </div>
+        </div>
+
+        <div class="rightcolumn">
+            <div class="section">
+                <h3>About me</h3>
+                <img class="sectionimg"></img>
+                <p>short body text blurb about self tbd</p>
+            </div>
+        </div>
     </body>
 
 </html>
