prework page css

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
     <!--header contains the logo and navigation buttons-->
     <header>
-        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px">SAM DAVITT</a></h1>
         <ul class=navbar>
             <li class=navbutton><a href="format.html">FORMAT</a></li>
             <li class=navbutton><a href="about.html" class="active">ABOUT</a></li>
