--- a/format.html
+++ b/format.html
@@ -14,32 +14,36 @@
     </header>
 
     <body>
-        <div class="leftcolumn">
-            <h2 style="color: white;">Hobbies</h2>
-            <div class="section">
-                <h4>Cooking</h4>
-                <img class="sectionimg"></img>
-                <p>Some body text about cooking & drinks hobby tbd</p>
+        <div class = "form">
+            <div class="leftcolumn">
+                <h2 style="color: #003380;">Hobbies</h2>
+                <div class="section">
+                    <h4>Cooking</h4>
+                    <img class="sectionimg"></img>
+                    <p>Some body text about cooking & drinks hobby tbd</p>
+                </div>
+                <div class="section">
+                    <h4>Hiking</h4>
+                    <img class="sectionimg"></img>
+                 <p>Some body text about hiking tbd</p>
+                </div>
+                <div class="section">
+                    <h4>Kickboxing and BJJ</h4>
+                    <img class="sectionimg"></img>
+                    <p>Some body text about kickboxing tbd</p>
+                </div>
             </div>
-            <div class="section">
-                <h4>Hiking</h4>
-                <img class="sectionimg"></img>
-                <p>Some body text about hiking tbd</p>
-            </div>
-            <div class="section">
-                <h4>Kickboxing and BJJ</h4>
-                <img class="sectionimg"></img>
-                <p>Some body text about kickboxing tbd</p>
-            </div>
-        </div>
 
-        <div class="rightcolumn">
-            <div class="section">
-                <h3>About me</h3>
-                <img class="sectionimg"></img>
-                <p>short body text blurb about self tbd</p>
+            <div class="rightcolumn">
+                <div class="section">
+                    <h3>About me</h3>
+                    <img class="sectionimg"></img>
+                    <p>short body text blurb about self tbd</p>
+                </div>
             </div>
         </div>
+        <div class="footer"></div>
     </body>
+
 
 </html>
