--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
 
     <!--header contains the logo and navigation buttons-->
     <header>
-        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px"></a></h1>
+        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px">SAM DAVITT</a></h1>
         <ul class=navbar>
-            <li class=navbutton><a href="#">FORMAT</a></li>
+            <li class=navbutton><a href="format.html">FORMAT</a></li>
             <li class=navbutton><a href="about.html">ABOUT</a></li>
-            <li class=navbutton><a href="contact.html"  class="active">CONTACT</a></li>
+            <li class=navbutton><a href="contact.html" class="active">CONTACT</a></li>
         </ul>
     </header>
 
