added some images

--- a/format.html
+++ b/format.html
@@ -19,17 +19,17 @@
                 <h2 style="color: #003380;">Hobbies</h2>
                 <div class="section">
                     <h4>Cooking</h4>
-                    <img class="sectionimg"></img>
+                    <img class="sectionimg" src="images/food.jpeg"></img>
                     <p>Some body text about cooking & drinks hobby tbd</p>
                 </div>
                 <div class="section">
                     <h4>Hiking</h4>
-                    <img class="sectionimg"></img>
+                    <img class="sectionimg" src="images/hike.jpeg"></img>
                  <p>Some body text about hiking tbd</p>
                 </div>
                 <div class="section">
                     <h4>Kickboxing and BJJ</h4>
-                    <img class="sectionimg"></img>
+                    <!--<img class="sectionimg"></img>-->
                     <p>Some body text about kickboxing tbd</p>
                 </div>
             </div>
@@ -37,7 +37,7 @@
             <div class="rightcolumn">
                 <div class="section">
                     <h3>About me</h3>
-                    <img class="sectionimg"></img>
+                    <img class="sectionimg" src="images/headshot.png"></img>
                     <p>short body text blurb about self tbd</p>
                 </div>
             </div>
