bio blurb and images

--- a/format.html
+++ b/format.html
@@ -20,17 +20,17 @@
                 <div class="section">
                     <h4>Cooking</h4>
                     <img class="sectionimg" src="images/food.jpeg"></img>
-                    <p>Some body text about cooking & drinks hobby tbd</p>
+                    <p>Good food brings people together and I love cooking for my friends and family. My favorite recipe is handmade capellini aglio e olio. I also have a passion for making cocktails- my favorite being the Pegu Club (a gin drink invented in the late 19th century in modern day Myanmar and repopularized by the famous cocktail bar of the same name in New York City).</p>
                 </div>
                 <div class="section">
                     <h4>Hiking</h4>
                     <img class="sectionimg" src="images/hike.jpeg"></img>
-                 <p>Some body text about hiking tbd</p>
+                    <img class="sectionimg" src="images/haleakala.jpeg"></img>
+                 <p>Growing up in New England, I spent lots of time in the outdoors hiking in the White Mountains of New Hampshire. A long term goal of mine is to summit every 4000ft.+ mountain in New Hampshire (some 48 peaks). I've been lucky enough to have hiked all across the world including in the Andes in Argentina, the Swiss Alps, and Haleakala National Park in Hawaii. In 2015, I summited Mt. Kilimanjaro in Tanzania, the highest mountain in Africa at 19,341ft.</p>
                 </div>
                 <div class="section">
-                    <h4>Kickboxing and BJJ</h4>
-                    <!--<img class="sectionimg"></img>-->
-                    <p>Some body text about kickboxing tbd</p>
+                    <h4>Sports - Soccer, Tennis, Kickboxing, Muay Thai, and BJJ</h4>
+                    <p>I've been an avid athlete my entire life. I grew up playing mostly tennis and soccer, and went on to work as a tennis coach for a number of years. More recently, I have taken up mixed martial arts- training primarily in kickboxing and muay thai (thai boxing) as well as some brazilian jiu jitsu. However, I am currently unable to train as I am rehabbing a torn labrum and biceps tendon injury.</p>
                 </div>
             </div>
 
@@ -38,7 +38,7 @@
                 <div class="section">
                     <h3>About me</h3>
                     <img class="sectionimg" src="images/headshot.png"></img>
-                    <p>short body text blurb about self tbd</p>
+                    <p>My name is Sam Davitt. I'm a 23 year old aspiring developer from Boston, MA. I grew up in Boston before attending Washington University in St. Louis for three years. After changing my major multiple times and struggling with my mental health and traditional academia, I decided to step back from college. Now, I am looking to start a career as a programmer. I enjoy and excel at logic puzzles and find coding to so far hold the same types of fun challenges. Pursuing a career in a field in high demand that I find fun and challenging seems like a dream. So, I'm excited to build my mastery and follow that dream.</p>
                 </div>
             </div>
         </div>
