bootstrapped main page

--- a/format.html
+++ b/format.html
@@ -1,49 +1,84 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-     
-    <!--header contains the logo and navigation buttons-->
-    <header>
-        <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px">SAM DAVITT</a></h1>
-        <ul class=navbar>
-            <li class=navbutton><a href="format.html" class="active">FORMAT</a></li>
-            <li class=navbutton><a href="about.html">ABOUT</a></li>
-            <li class=navbutton><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </header>
 
-    <body>
-        <div class = "form">
-            <div class="leftcolumn">
-                <h2 style="color: #003380;">Hobbies</h2>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<!--header contains the logo and navigation buttons-->
+<header>
+    <h1 class=logo><a href="index.html"><img src="images/signature.png" alt="Signature" width="150px">SAM DAVITT</a>
+    </h1>
+    <ul class=navbar style="margin: 0px;">
+        <li class=navbutton><a href="format.html" class="active">FORMAT</a></li>
+        <li class=navbutton><a href="about.html">ABOUT</a></li>
+        <li class=navbutton><a href="contact.html">CONTACT</a></li>
+    </ul>
+</header>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+                <h2 style="color: #003380; text-align: center;">Hobbies</h2>
                 <div class="section">
                     <h4>Cooking</h4>
-                    <img class="sectionimg" src="images/food.jpeg"></img>
-                    <p>Good food brings people together and I love cooking for my friends and family. My favorite recipe is handmade capellini aglio e olio. I also have a passion for making cocktails- my favorite being the Pegu Club (a gin drink invented in the late 19th century in modern day Myanmar and repopularized by the famous cocktail bar of the same name in New York City).</p>
+                    <img class="img-fluid" src="images/food.jpeg"></img>
+                    <p>Good food brings people together and I love cooking for my friends and family. My favorite recipe
+                        is handmade capellini aglio e olio. I also have a passion for making cocktails- my favorite
+                        being the Pegu Club (a gin drink invented in the late 19th century in modern day Myanmar and
+                        repopularized by the famous cocktail bar of the same name in New York City).</p>
                 </div>
                 <div class="section">
                     <h4>Hiking</h4>
-                    <img class="sectionimg" src="images/hike.jpeg"></img>
-                    <img class="sectionimg" src="images/haleakala.jpeg"></img>
-                 <p>Growing up in New England, I spent lots of time in the outdoors hiking in the White Mountains of New Hampshire. A long term goal of mine is to summit every 4000ft.+ mountain in New Hampshire (some 48 peaks). I've been lucky enough to have hiked all across the world including in the Andes in Argentina, the Swiss Alps, and Haleakala National Park in Hawaii. In 2015, I summited Mt. Kilimanjaro in Tanzania, the highest mountain in Africa at 19,341ft.</p>
+                    <div class="row">
+                        <div class="col-md-6"><img src="images/hike.jpeg" alt="hiking" class="img-fluid"></div>
+                        <div class="col-md-6"><img src="images/haleakala.jpeg" alt="haleakala" class="img-fluid"></div>
+                    </div>
+                    <p>Growing up in New England, I spent lots of time in the outdoors hiking in the White Mountains of
+                        New Hampshire. A long term goal of mine is to summit every 4000ft.+ mountain in New Hampshire
+                        (some 48 peaks). I've been lucky enough to have hiked all across the world including in the
+                        Andes in Argentina, the Swiss Alps, and Haleakala National Park in Hawaii. In 2015, I summited
+                        Mt. Kilimanjaro in Tanzania, the highest mountain in Africa at 19,341ft.</p>
                 </div>
                 <div class="section">
                     <h4>Sports - Soccer, Tennis, Kickboxing, Muay Thai, and BJJ</h4>
-                    <p>I've been an avid athlete my entire life. I grew up playing mostly tennis and soccer, and went on to work as a tennis coach for a number of years. More recently, I have taken up mixed martial arts- training primarily in kickboxing and muay thai (thai boxing) as well as some brazilian jiu jitsu. However, I am currently unable to train as I am rehabbing a torn labrum and biceps tendon injury.</p>
+                    <p>I've been an avid athlete my entire life. I grew up playing mostly tennis and soccer, and went on
+                        to work as a tennis coach for a number of years. More recently, I have taken up mixed martial
+                        arts- training primarily in kickboxing and muay thai (thai boxing) as well as some brazilian jiu
+                        jitsu. However, I am currently unable to train as I am rehabbing a torn labrum and biceps tendon
+                        injury.</p>
                 </div>
             </div>
 
-            <div class="rightcolumn">
+            <div class="col-md-4">
                 <div class="section">
                     <h3>About me</h3>
-                    <img class="sectionimg" src="images/headshot.png"></img>
-                    <p>My name is Sam Davitt. I'm a 23 year old aspiring developer from Boston, MA. I grew up in Boston before attending Washington University in St. Louis for three years. After changing my major multiple times and struggling with my mental health and traditional academia, I decided to step back from college. Now, I am looking to start a career as a programmer. I enjoy and excel at logic puzzles and find coding to so far hold the same types of fun challenges. Pursuing a career in a field in high demand that I find fun and challenging seems like a dream. So, I'm excited to build my mastery and follow that dream.</p>
+                    <img class="img-fluid" src="images/headshot.png"></img>
+                    <p>My name is Sam Davitt. I'm a 23 year old aspiring developer from Boston, MA. I grew up in Boston
+                        before attending Washington University in St. Louis for three years. After changing my major
+                        multiple times and struggling with my mental health and traditional academia, I decided to step
+                        back from college. Now, I am looking to start a career as a programmer. I enjoy and excel at
+                        logic puzzles and find coding to so far hold the same types of fun challenges. Pursuing a career
+                        in a field in high demand that I find fun and challenging seems like a dream. So, I'm excited to
+                        build my mastery and follow that dream.</p>
                 </div>
             </div>
         </div>
-        <div class="footer"></div>
-    </body>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+</body>
 
 
 </html>
